# dog-detector

./: .gitignore  Cargo.toml  README.md
arduino/: README.md
arduino/DogDetector/: DogDetector.ino
dockerfiles/: arm64.Dockerfile  rust-tf-arm64-base.Dockerfile
src/: config.rs  context.rs  detector.rs  image_processing.rs  main.rs
