[package]
name = "dog-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camera_capture = "0.5.0"
chrono = "0.4.22"
image = "0.17.0"
rumqttc = "0.14.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tract-onnx = "0.17.4"
tract-tensorflow = "0.17.4"
