[package]
name = "dog-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
image = "0.23.14"
rumqttc = "0.14.0"
tract-onnx = "0.17.4"
tract-tensorflow = "0.17.4"
base64 = "0.13.0"

[dependencies.nokhwa]
version = "0.9.4"
features = ["default", "input-v4l"]

[dependencies.tokio]
version = "1.20.1"
features = ["rt-multi-thread", "macros"]
