[package]
name = "dog-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
image = "0.23.14"
rumqttc = "0.14.0"
base64 = "0.13.0"
ndarray = "0.15.6"
directories = "3.0.2"
toml = "0.5.8"
tensorflow = { version = "0.19.1", features = ["eager", "ndarray"]}
serde = { version = "1.0.127", features = ["derive"] }

[dependencies.nokhwa]
version = "0.9.4"
features = ["default", "input-v4l"]

[dependencies.tokio]
version = "1.20.1"
features = ["rt-multi-thread", "macros"]
